fixed gap and overflow

--- a/sign-up sequence/login.css
+++ b/sign-up sequence/login.css
@@ -37,30 +37,33 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: auto;
 }
 
 .header {
-  
+    display: flex;
+    align-self: flex-start;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .header img {
     width: 84px;
-    height: auto;
 }
 
 .sign-up-block {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr;
     grid-gap: 9px;
-    max-width: 450px;
-    width: 100%;
+    max-width: 377px;
+    width: 70%;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease, pointer-events 0.3s ease;
 }
 
 .sign-up-block.active-page {
+    display: grid;
     opacity: 1;
     pointer-events: auto;
 }
